syntax = "proto3";
package msg;

message ReqChan {
	uint32 ClientID = 1; 
}

message ReqChanAck {
	uint32 ClientID = 1;
	uint32 ChanID = 2;		//通道ID
	uint32 ChanPort = 3;	//通道端口
}

message Pack {
	Type type = 1;
	enum Type {
		DATA = 0;
		SUBCRIBE = 1;
		SUBCRIBE_ACK = 2;
		REPORT = 3;
		RELEASE = 4;
	}
	
	Subcribe subcribe = 2;
	message Subcribe {
		uint32 ChanID 	  = 1;  //通道ID, 从ReqChanAck获取
		string ResouceID  = 2;  //资源ID
		uint32 Start	  = 3;  //订阅的起始片段, 0起始
		uint32 End		  = 4;  //订阅的结束片段
	};

	SubcribeAck subcribeAck = 3;
	message SubcribeAck {
		string ResouceID   = 1; //资源ID
		uint32 SessionID   = 2; //会话ID
		bool   IsAccepted  = 3; //是否接受请求
	};

	Report report = 4;
	message Report {
		uint32  SessionID = 1; 		//会话ID
		uint32	TotalRecved = 2; 	//到目前为止收到的包
		uint32	LastRecved	= 3;	//最近一秒收到的包
		bytes Bitmap = 4; //标识接收情况的位图,  第N位为1,代表第N片已经收到
	};

	Release release = 5;
	message Release {
		uint32  ChanID = 1;	//通道ID
	};

	Data data = 6;
	message Data {
		uint32  SessionID = 1;	//会话ID
		uint32	Index	  = 2;	//片段索引
		bytes	Payload	  = 3;	//负载,最大1400字节 
	};
};



